tests/errors/semantic/blocking/SET_UNHASHABLE_TYPE_2.py
# Pyccel can't hash non-scalar types
# pylint: disable=missing-function-docstring, missing-module-docstring

l = {(1.9, 6.6), (4.9, 5.8)}
